styles.css
html,
body {
  margin: 0;
  padding: 0;
  height: 100vh;
  width: 100vw;
}

h1,
h2,
h3,
h4,
h5 {
  margin: 0;
  padding: 0;
}

p {
  margin: 0;
  padding: 0;
}

hr {
  unicode-bidi: isolate;
  margin-block-start: 0;
  margin-block-end: 0;
  margin-inline-start: 0;
  margin-inline-end: 0;
  overflow: auto;
  border-style: none;
  border-width: 0px;
}

* {
  font-family: roboto, sans-serif;
}
.container {
  height: 100%;
  width: 100%;
  display: grid;
  grid-template: 1fr 5fr / 1fr 4fr;
}

.sidebar {
  grid-row: 1 / 3;
  grid-column: 1 / 2;
  background-color: #1992d4;

  display: grid;
  grid-template: 1fr 8fr / 1fr;
}

header {
  grid-row: 1 / 2;
  grid-column: 2 / 3;
  background-color: white;

  display: grid;
  grid-template: 1fr 2fr / 2fr 1fr;
  grid-template-areas:
    "searchbar userinfo"
    "greeting buttons";
}

main {
  grid-row: 2 / 3;
  grid-column: 2 / 3;
  background-color: #e2e8f0;

  display: grid;
  grid-template: 1fr 1fr / 2fr 1fr;
  grid-template-areas:
    "projects announcements"
    "projects trending";

  padding-left: 20px;
  padding-bottom: 60px;
}

.branding {
  grid-row: 1 / 2;
  grid-column: 1 / 2;

  display: grid;
  grid-template: 1fr / 1fr 3fr;
  justify-items: start;
  align-items: center;
}

.branding img {
  width: 50px;
  height: 50px;
}

.branding h2 {
  color: white;
}

.navigation {
  grid-row: 2 / 3;
  grid-column: 1 / 2;
  display: flex;
  flex-direction: column;
  gap: 80px;
}

.navigation h3 {
  color: white;
}

.main-nav {
  display: grid;
  grid-template-rows: repeat(6, 1fr);
  grid-template-columns: 1fr;
}

.misc-nav {
  display: grid;
  grid-template-rows: repeat(3, 1fr);
  grid-template-columns: 1fr;
}
.navigation .nav-element {
  display: grid;
  grid-template: 1fr / 1fr 3fr;
  justify-items: start;
  align-items: center;
}

.navigation img {
  width: 30px;
  height: 30px;
}

.searchbar {
  grid-area: searchbar;
  display: grid;
  grid-template: 1fr / 1fr 5fr;
  column-gap: 20px;
}

.searchbar img {
  width: 40px;
  height: 40px;
}

.searchbar label {
  justify-self: end;
  align-self: center;
}

.searchbar input {
  width: 60%;
  height: 40%;
  justify-self: start;
  align-self: center;
}

.userinfo {
  grid-area: userinfo;
  display: grid;
  grid-template: 1fr / 1fr 1fr 4fr;
  justify-self: center;
  justify-items: start;
  align-items: center;
  column-gap: 20px;
}

.userinfo img.bell {
  width: 40px;
  height: 40px;
}

.userinfo img.profile-picture {
  width: 40px;
  height: 40px;
}

.greeting {
  grid-area: greeting;
  display: grid;
  grid-template: 1fr / 1fr 4fr;
  column-gap: 20px;
  align-items: center;
}

.greeting .profile-picture {
  width: 70px;
  height: 70px;
  background-color: black;
  justify-self: end;
}

.greeting .greeting-message {
  font-size: 2rem;
}

.greeting .greeting-message::first-line {
  font-size: 1rem;
}

.buttons {
  grid-area: buttons;
  display: grid;
  grid-template: 1fr / 1fr 1fr 1fr;
  justify-self: start;
  justify-items: center;
  align-items: center;
  column-gap: 30px;
  width: 100%;
}

.buttons button {
  width: 80%;
  height: 30%;
}
.projects {
  grid-area: projects;

  display: grid;
  grid-template: 1fr 10fr / 1fr;
  row-gap: 10px;
}

.projects h4 {
  align-self: flex-end;
}

.projects .content {
  display: grid;
  grid-template: 1fr 1fr 1fr / 1fr 1fr;
  gap: 20px;
}

.card {
  display: grid;
}

.card .logos {
  justify-self: end;
  align-self: center;
}

.card .logos img {
  height: 30px;
  width: 30px;
}

.announcements {
  grid-area: announcements;
  display: grid;
  grid-template: 1fr 5fr / 1fr;
}

.announcements h4 {
  align-self: flex-end;
}

.announcements .content {
  display: grid;
  grid-template: 1fr 1fr 1fr / 1fr;
  align-items: center;
}

.announcement {
  display: grid;
  height: 100%;
  grid-template: 1fr 3fr 1fr / 1fr;
}

.announcement hr {
  height: 1px;
  color: gray;
  background-color: gray;
}

.trending {
  grid-area: trending;
  display: grid;
  grid-template: 1fr 12fr / 1fr;
}

.trending h4 {
  align-self: flex-end;
}

.trending .profiles {
  display: grid;
  grid-template: 1fr 1fr 1fr 1fr / 1fr;
}

.trending .profiles .profile {
  display: grid;
  grid-template: 1fr / 1fr 6fr;
  align-items: center;
}

.trending .profiles .profile img {
  width: 40px;
  height: 40px;
}

